[tool.poetry]
name = "linear_programming_sahaj"
version = "0.1.0"
description = ""
authors = ["swhustla <fdkelly@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
numpy = "^1.24.1"
PuLP = "^2.7.0"
ipykernel = "^6.20.2"
ortools = "^9.5.2237"
notebook = "^6.5.3"
PySCIPOpt = "^4.2.0"
jupyter = "^1.0.0"
jupyterlab = "^3.6.1"
gurobipy = "^10.0.1"
Pyomo = "^6.5.0"
Cython = "^0.29.33"

[tool.poetry.dev-dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
